[gd_scene load_steps=8 format=2]

[ext_resource path="res://HUD.gd" type="Script" id=1]
[ext_resource path="res://assets/Xolonium-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://HintTheme.tres" type="Theme" id=3]
[ext_resource path="res://MainController.gd" type="Script" id=4]
[ext_resource path="res://audio/random.mp3" type="AudioStream" id=5]
[ext_resource path="res://Theme.tres" type="Theme" id=6]

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 2 )

[node name="MainScene" type="Node2D"]
script = ExtResource( 4 )

[node name="HUD" type="CanvasLayer" parent="."]
script = ExtResource( 1 )

[node name="TimerDisplay" type="ColorRect" parent="HUD"]
margin_left = 400.0
margin_top = 3.0
margin_right = 615.0
margin_bottom = 55.0
color = Color( 0, 0, 0, 0.501961 )

[node name="SecondsLabel" type="Label" parent="HUD/TimerDisplay"]
margin_left = 69.0
margin_top = 9.0
margin_right = 106.0
margin_bottom = 39.0
theme = ExtResource( 6 )
text = "10"

[node name="MillisecondsLabel" type="Label" parent="HUD/TimerDisplay"]
margin_left = 111.0
margin_top = 12.0
margin_right = 148.0
margin_bottom = 41.0
theme = ExtResource( 6 )
custom_fonts/font = SubResource( 3 )
text = "000"

[node name="SuccessMessageBox" type="ColorRect" parent="HUD"]
margin_left = 250.0
margin_top = 100.0
margin_right = 762.0
margin_bottom = 300.0
color = Color( 0.0470588, 0.952941, 0.14902, 1 )

[node name="ColorRect" type="ColorRect" parent="HUD/SuccessMessageBox"]
margin_left = 2.0
margin_top = 2.0
margin_right = 510.0
margin_bottom = 198.0
color = Color( 0.00392157, 0.345098, 0.054902, 1 )

[node name="Label" type="Label" parent="HUD/SuccessMessageBox/ColorRect"]
margin_right = 509.0
margin_bottom = 69.0
theme = ExtResource( 3 )
text = "DELIVERY COMPLETE!
"
align = 1
valign = 1

[node name="Label2" type="Label" parent="HUD/SuccessMessageBox/ColorRect"]
margin_top = 73.0
margin_right = 509.0
margin_bottom = 146.0
theme = ExtResource( 3 )
text = "Bonus time"
align = 1
valign = 1

[node name="Label3" type="Label" parent="HUD/SuccessMessageBox/ColorRect"]
margin_top = 146.0
margin_right = 509.0
margin_bottom = 197.0
theme = ExtResource( 3 )
text = "[N]: Continue to the next stage!"
align = 1
valign = 1

[node name="FailureMessageBox" type="ColorRect" parent="HUD"]
visible = false
margin_left = 250.0
margin_top = 100.0
margin_right = 762.0
margin_bottom = 300.0
color = Color( 0.980392, 0.0235294, 0.0235294, 1 )

[node name="ColorRect" type="ColorRect" parent="HUD/FailureMessageBox"]
margin_left = 2.0
margin_top = 2.0
margin_right = 510.0
margin_bottom = 198.0
color = Color( 0.27451, 0.00784314, 0.00784314, 1 )

[node name="Label" type="Label" parent="HUD/FailureMessageBox/ColorRect"]
margin_top = -1.0
margin_right = 509.0
margin_bottom = 134.0
theme = ExtResource( 3 )
text = "YOU FAILED!"
align = 1
valign = 1

[node name="Label2" type="Label" parent="HUD/FailureMessageBox/ColorRect"]
margin_top = 139.0
margin_right = 509.0
margin_bottom = 197.0
theme = ExtResource( 3 )
text = "[Q]: Abandon Run [R]: Retry the stage"
align = 1
valign = 1

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -10.0
autoplay = true
