[gd_scene load_steps=15 format=2]

[ext_resource path="res://assets/block.png" type="Texture" id=1]
[ext_resource path="res://Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://Customer.tscn" type="PackedScene" id=3]
[ext_resource path="res://Theme.tres" type="Theme" id=4]
[ext_resource path="res://assets/Xolonium-Regular.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://Stage.gd" type="Script" id=6]
[ext_resource path="res://HUD.gd" type="Script" id=7]
[ext_resource path="res://HintTheme.tres" type="Theme" id=8]
[ext_resource path="res://StageBounds.gd" type="Script" id=9]
[ext_resource path="res://MainController.gd" type="Script" id=10]

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 5 )

[sub_resource type="ConvexPolygonShape2D" id=1]
points = PoolVector2Array( 62, 60, 0, 60, 0, 0, 62, 0 )

[sub_resource type="TileSet" id=2]
0/name = "block.png 0"
0/texture = ExtResource( 1 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 64, 64 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 1 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 1 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 1291, 306 )

[node name="TestScene" type="Node2D"]
script = ExtResource( 10 )

[node name="HUD" type="CanvasLayer" parent="."]
script = ExtResource( 7 )

[node name="ColorRect" type="ColorRect" parent="HUD"]
margin_left = 400.0
margin_top = 3.0
margin_right = 615.0
margin_bottom = 55.0
color = Color( 0, 0, 0, 0.501961 )

[node name="SecondsLabel" type="Label" parent="HUD/ColorRect"]
margin_left = 58.0
margin_top = 9.0
margin_right = 95.0
margin_bottom = 39.0
theme = ExtResource( 4 )
text = "10"

[node name="MillisecondsLabel" type="Label" parent="HUD/ColorRect"]
margin_left = 100.0
margin_top = 12.0
margin_right = 137.0
margin_bottom = 41.0
theme = ExtResource( 4 )
custom_fonts/font = SubResource( 3 )
text = "000"

[node name="SuccessMessageBox" type="ColorRect" parent="HUD"]
visible = false
margin_left = 250.0
margin_top = 100.0
margin_right = 762.0
margin_bottom = 300.0
color = Color( 0.0470588, 0.952941, 0.14902, 1 )

[node name="ColorRect" type="ColorRect" parent="HUD/SuccessMessageBox"]
margin_left = 2.0
margin_top = 2.0
margin_right = 510.0
margin_bottom = 198.0
color = Color( 0.00392157, 0.345098, 0.054902, 1 )

[node name="Label" type="Label" parent="HUD/SuccessMessageBox/ColorRect"]
margin_right = 509.0
margin_bottom = 197.0
theme = ExtResource( 8 )
text = "YOU DID IT!

[N]: Continue to the next stage!"
align = 1
valign = 1

[node name="Stage" type="Node2D" parent="."]
script = ExtResource( 6 )

[node name="Timer" type="Timer" parent="Stage"]
wait_time = 10.0
one_shot = true

[node name="TileMap" type="TileMap" parent="Stage"]
tile_set = SubResource( 2 )
format = 1
tile_data = PoolIntArray( -65497, 0, 0, -65496, 0, 0, 39, 0, 0, 40, 0, 0, 131071, 0, 0, 65536, 0, 0, 65575, 0, 0, 65576, 0, 0, 196607, 0, 0, 131072, 0, 0, 131111, 0, 0, 131112, 0, 0, 262143, 0, 0, 196608, 0, 0, 196647, 0, 0, 196648, 0, 0, 327679, 0, 0, 262144, 0, 0, 262183, 0, 0, 262184, 0, 0, 393215, 0, 0, 327680, 0, 0, 327719, 0, 0, 327720, 0, 0, 458751, 0, 0, 393216, 0, 0, 393255, 0, 0, 393256, 0, 0, 524287, 0, 0, 458752, 0, 0, 458766, 0, 0, 458767, 0, 0, 458768, 0, 0, 458769, 0, 0, 458770, 0, 0, 458771, 0, 0, 458791, 0, 0, 458792, 0, 0, 589823, 0, 0, 524288, 0, 0, 524289, 0, 0, 524290, 0, 0, 524291, 0, 0, 524292, 0, 0, 524293, 0, 0, 524294, 0, 0, 524295, 0, 0, 524296, 0, 0, 524297, 0, 0, 524298, 0, 0, 524299, 0, 0, 524300, 0, 0, 524301, 0, 0, 524302, 0, 0, 524303, 0, 0, 524304, 0, 0, 524305, 0, 0, 524306, 0, 0, 524307, 0, 0, 524308, 0, 0, 524309, 0, 0, 524310, 0, 0, 524311, 0, 0, 524314, 0, 0, 524315, 0, 0, 524316, 0, 0, 524320, 0, 0, 524321, 0, 0, 524322, 0, 0, 524323, 0, 0, 524324, 0, 0, 524325, 0, 0, 524326, 0, 0, 524327, 0, 0, 524328, 0, 0, 655359, 0, 0, 589824, 0, 0, 589825, 0, 0, 589826, 0, 0, 589827, 0, 0, 589828, 0, 0, 589829, 0, 0, 589830, 0, 0, 589831, 0, 0, 589832, 0, 0, 589833, 0, 0, 589834, 0, 0, 589835, 0, 0, 589836, 0, 0, 589837, 0, 0, 589838, 0, 0, 589839, 0, 0, 589840, 0, 0, 589841, 0, 0, 589842, 0, 0, 589843, 0, 0, 589844, 0, 0, 589845, 0, 0, 589846, 0, 0, 589847, 0, 0, 589850, 0, 0, 589851, 0, 0, 589852, 0, 0, 589856, 0, 0, 589857, 0, 0, 589858, 0, 0, 589859, 0, 0, 589860, 0, 0, 589861, 0, 0, 589862, 0, 0, 589863, 0, 0, 589864, 0, 0 )

[node name="ColorRect" type="ColorRect" parent="Stage"]
margin_left = 137.0
margin_top = 226.0
margin_right = 594.0
margin_bottom = 348.0

[node name="ColorRect" type="ColorRect" parent="Stage/ColorRect"]
margin_left = 1.0
margin_top = 1.0
margin_right = 456.0
margin_bottom = 121.0
color = Color( 0, 0, 0, 1 )

[node name="Label" type="Label" parent="Stage/ColorRect/ColorRect"]
margin_left = 28.0
margin_top = 6.0
margin_right = 427.0
margin_bottom = 118.0
theme = ExtResource( 8 )
text = "Deliver the pizza within 10 seconds 
or YOU'RE FIRED!

[A] [S] to move
[W] or [Space] to Jump"
align = 1

[node name="StageBounds" type="Area2D" parent="Stage"]
script = ExtResource( 9 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Stage/StageBounds"]
position = Vector2( 1281, 296 )
shape = SubResource( 4 )

[node name="Customer" parent="Stage" instance=ExtResource( 3 )]
position = Vector2( 2368, 481 )

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( 154, 439 )

[connection signal="stage_success" from="Stage" to="." method="_on_Stage_stage_success"]
[connection signal="stage_success" from="Stage" to="Player" method="_on_Stage_stage_success"]
[connection signal="time_update" from="Stage" to="HUD" method="_on_Stage_time_update"]
[connection signal="timeout" from="Stage/Timer" to="Stage" method="_on_Timer_timeout"]
[connection signal="body_entered" from="Stage/StageBounds" to="Stage/StageBounds" method="_on_StageBounds_body_entered"]
[connection signal="delivered" from="Stage/Customer" to="Stage" method="_on_Customer_delivered"]
[connection signal="delivered" from="Stage/Customer" to="Player" method="_on_Customer_delivered"]
